--- a/CleanArchMVC/CleanArchMVC.WebUI/CleanArchMVC.WebUI.csproj
+++ b/CleanArchMVC/CleanArchMVC.WebUI/CleanArchMVC.WebUI.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArchMVC.Infra.Ioc\CleanArchMVC.Infra.Ioc.csproj" />
+  </ItemGroup>
+
 </Project>
