--- a/CleanArchMVC/CleanArchMVC.WebUI/appsettings.json
+++ b/CleanArchMVC/CleanArchMVC.WebUI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionString": {
+    "DefaultConnection": "Data Source=SFR3252;Initial Catalog=CleanArchDB;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
