--- a/CleanArchMVC/CleanArchMVC.Application/CleanArchMVC.Application.csproj
+++ b/CleanArchMVC/CleanArchMVC.Application/CleanArchMVC.Application.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="MediatR" Version="11.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CleanArchMVC.Domain\CleanArchMVC.Domain.csproj" />
   </ItemGroup>
 
