Adicionando autenticação JWT e subindo para .net core 8 o projeto

--- a/CleanArchMVC/CleanArchMVC.API/appsettings.Development.json
+++ b/CleanArchMVC/CleanArchMVC.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SFR3252;Initial Catalog=CleanArchDB;Integrated Security=True"
+    "DefaultConnection": "Data Source=SFR3252;Initial Catalog=CleanArchDBNew;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Jwt": {
+    "SecretKey": "NumSey2024@VouMudarDepois@205",
+    "Issuer": "macoratti.net",
+    "Audience": "http://www.macoratti.net",
+    "Expiration": 10
   }
 }
