--- a/CleanArchMVC/CleanArchMVC.API/appsettings.json
+++ b/CleanArchMVC/CleanArchMVC.API/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "SecretKey": "ColnM63&e%.kE\\U#E(<~G,36Zd.=n4s}FT`qDO£j*B!YZo:ur'",
+    "Issuer": "macoratti.net",
+    "Audience": "http://www.macoratti.net",
+    "Expiration": 10
+  }
 }
